first approach finished, now there is a need to refactor the architecture renderer